[gd_scene load_steps=15 format=4 uid="uid://d00a2mdcmc3i7"]

[ext_resource type="Script" uid="uid://clobojvkbx1xf" path="res://scripts/menu.gd" id="1_vjb58"]
[ext_resource type="Texture2D" uid="uid://b1wm6y1mqptqc" path="res://assets/sprites/placeholder/placeholdercielosol.png" id="2_mhnvy"]
[ext_resource type="Texture2D" uid="uid://b6ivuq0kbe0t7" path="res://assets/sprites/logos/inti.png" id="3_4ytvr"]
[ext_resource type="Texture2D" uid="uid://36t5gpd2k3ch" path="res://assets/sprites/logos/logo_still_pink.png" id="4_mhnvy"]
[ext_resource type="Texture2D" uid="uid://1wx6mtufxrjp" path="res://assets/tiles/TSCieloSol.png" id="5_6y36n"]
[ext_resource type="Texture2D" uid="uid://boqkn2p1dnjqp" path="res://assets/tiles/TSCieloLuna.png" id="6_54bwj"]
[ext_resource type="Texture2D" uid="uid://cvcrewjdipkxi" path="res://assets/tiles/placeholderPlataformaNubeSol.png" id="7_bgfja"]
[ext_resource type="Texture2D" uid="uid://b0svcnsdaey7s" path="res://assets/tiles/placeholderPlataformaNubeLuna.png" id="8_vxe4c"]
[ext_resource type="AudioStream" uid="uid://c0cfq207t8406" path="res://assets/sounds/Chaca Still pink.wav" id="9_54bwj"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_mn36c"]
texture = ExtResource("5_6y36n")
texture_region_size = Vector2i(32, 32)
0:0/size_in_atlas = Vector2i(6, 2)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-80.59558, -15.709305, 77.86352, -15.709305, 16, 16, -16, 16)
0:0/0/physics_layer_0/polygon_0/one_way = true
6:0/size_in_atlas = Vector2i(2, 2)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
6:0/0/physics_layer_0/polygon_0/one_way = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_klrlf"]
texture = ExtResource("6_54bwj")
texture_region_size = Vector2i(32, 32)
0:2/size_in_atlas = Vector2i(6, 2)
0:2/0 = 0
6:2/size_in_atlas = Vector2i(2, 2)
6:2/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_drqls"]
texture = ExtResource("7_bgfja")
texture_region_size = Vector2i(32, 32)
0:0/size_in_atlas = Vector2i(6, 2)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-74.02429, -14.650642, 70.5544, -15.807272, 16, 16, -16, 16)
0:0/0/physics_layer_0/polygon_0/one_way = true
6:0/size_in_atlas = Vector2i(2, 2)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
6:0/0/physics_layer_0/polygon_0/one_way = true
6:2/size_in_atlas = Vector2i(2, 2)
6:2/0 = 0
0:2/size_in_atlas = Vector2i(6, 2)
0:2/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_g2cc3"]
texture = ExtResource("8_vxe4c")
texture_region_size = Vector2i(32, 32)
0:0/size_in_atlas = Vector2i(6, 2)
0:0/0 = 0
6:0/size_in_atlas = Vector2i(2, 2)
6:0/0 = 0
6:2/size_in_atlas = Vector2i(2, 2)
6:2/0 = 0
0:2/size_in_atlas = Vector2i(6, 2)
0:2/0 = 0

[sub_resource type="TileSet" id="TileSet_282m6"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 2
physics_layer_0/collision_mask = 0
sources/2 = SubResource("TileSetAtlasSource_drqls")
sources/3 = SubResource("TileSetAtlasSource_g2cc3")
sources/0 = SubResource("TileSetAtlasSource_mn36c")
sources/1 = SubResource("TileSetAtlasSource_klrlf")

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vjb58")

[node name="Sprite2DFondo" type="Sprite2D" parent="."]
position = Vector2(386.00003, 1258)
scale = Vector2(1.0992584, 1.0992584)
texture = ExtResource("2_mhnvy")

[node name="PlataformasSol" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAEABQAAQAAAAIAAAAIAAIAAQAAAAIAAAASAAwAAQAAAAIAAAABAAwAAAAGAAAAAAACAAwAAAAGAAAAAAAEAAcAAAAGAAAAAAADAAcAAAAGAAAAAAATABUAAAAGAAAAAAAUAAMAAAAGAAAAAAAVAAMAAAAGAAAAAAAWAAMAAAAGAAAAAAAHABsAAAAAAAAAAAAQABsAAAAAAAAAAAAMAB8AAAAAAAAAAAA=")
tile_set = SubResource("TileSet_282m6")

[node name="MenuPrincipal" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainerOpciones" type="VBoxContainer" parent="MenuPrincipal"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 279.0
offset_top = 413.5
offset_right = 449.0
offset_bottom = 598.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="Sprite2DSol" type="Sprite2D" parent="MenuPrincipal/VBoxContainerOpciones"]
position = Vector2(87, -146.5)
scale = Vector2(1.34625, 1.34625)
texture = ExtResource("3_4ytvr")

[node name="BotonJugar" type="Button" parent="MenuPrincipal/VBoxContainerOpciones"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "JUGAR"
icon_alignment = 1

[node name="BotonCreditos" type="Button" parent="MenuPrincipal/VBoxContainerOpciones"]
layout_mode = 2
size_flags_vertical = 2
theme_override_font_sizes/font_size = 26
text = "CREDITOS
"
icon_alignment = 1

[node name="BotonSalir" type="Button" parent="MenuPrincipal/VBoxContainerOpciones"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "SALIR"
icon_alignment = 1

[node name="Creditos" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -320.0
offset_top = -454.0
offset_right = -320.0
offset_bottom = -454.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8400003, 0.8400003)

[node name="ColorRect" type="ColorRect" parent="Creditos"]
layout_mode = 0
offset_left = 4.9999995
offset_top = 754.0
offset_right = 45.0
offset_bottom = 794.0
scale = Vector2(18.920002, 10.92)
color = Color(0.68413997, 0, 0.3237353, 0.7882353)

[node name="VBoxContainer" type="VBoxContainer" parent="Creditos"]
layout_mode = 0
offset_left = 13.0
offset_top = 761.0
offset_right = 183.0
offset_bottom = 1174.0

[node name="Label" type="Label" parent="Creditos/VBoxContainer"]
layout_mode = 2
text = "CREDITOS:
Grupo Still Pink

Programacion:
Martin Gabriel Grane
Matias Castelnuovo 

Arte:
Ivan Pereyra
Anabella Lopez Luque

Audio y Musica:
Bautista Krotter

Game Design:
Agustin Bosco"

[node name="LogoStillPink" type="Sprite2D" parent="Creditos"]
position = Vector2(556, 977)
scale = Vector2(0.6855447, 0.6855447)
texture = ExtResource("4_mhnvy")

[node name="VBoxContainerOpciones" type="VBoxContainer" parent="Creditos"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 280.9523
offset_top = 586.18945
offset_right = 450.9523
offset_bottom = 770.68945
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.1773248, 1.1773248)
theme_override_constants/separation = 8

[node name="BotonVolver" type="Button" parent="Creditos/VBoxContainerOpciones"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "VOLVER
"
icon_alignment = 1

[node name="Sonido" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="AudioListener2D" type="AudioListener2D" parent="Sonido"]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Sonido"]
stream = ExtResource("9_54bwj")
volume_db = -5.0
autoplay = true

[connection signal="pressed" from="MenuPrincipal/VBoxContainerOpciones/BotonJugar" to="." method="_on_boton_jugar_pressed"]
[connection signal="pressed" from="MenuPrincipal/VBoxContainerOpciones/BotonCreditos" to="." method="_on_boton_creditos_pressed"]
[connection signal="pressed" from="MenuPrincipal/VBoxContainerOpciones/BotonSalir" to="." method="_on_boton_salir_pressed"]
[connection signal="pressed" from="Creditos/VBoxContainerOpciones/BotonVolver" to="." method="_on_boton_volver_pressed"]
